REGRESSION(r96517): Attribute selector fails to match dynamically modified style attribute https://bugs.webkit.org/show_bug.cgi?id=87349

Source/WebCore:

Reviewed by Andreas Kling.

Selector fast path does not trigger lazy style attribute generation. Since attribute selectors matching
style attribute are rare, disallow them from the fast path rather than making it more branchy.

Test: fast/css/dynamic-style-attribute-query.html

* css/SelectorChecker.cpp:
(WebCore::isFastCheckableMatch):

LayoutTests:

Reviewed by Andreas Kling.

* fast/css/dynamic-style-attribute-query-expected.txt: Added.
* fast/css/dynamic-style-attribute-query.html: Added.



Canonical link: https://commits.webkit.org/105433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118688 268f45cc-cd09-0410-ab3c-d52691b4dbfc